--- a/src/main/resources/com/example/curs0/add-readres.fxml
+++ b/src/main/resources/com/example/curs0/add-readres.fxml
@@ -10,37 +10,37 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<TabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+<TabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.curs0.AddreadresController">
   <tabs>
-    <Tab text="Библеотека ИжГТУ">
+    <Tab text="Добовление читателя">
       <content>
         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                <children>
                   <VBox layoutX="486.0" layoutY="-1.0" prefHeight="372.0" prefWidth="113.0">
                      <children>
-                        <Button mnemonicParsing="false" prefHeight="48.0" prefWidth="127.0" text="Книги">
+                        <Button fx:id="booksiz" mnemonicParsing="false" prefHeight="48.0" prefWidth="127.0" text="Книги">
                            <VBox.margin>
                               <Insets />
                            </VBox.margin>
                         </Button>
-                        <Button mnemonicParsing="false" prefHeight="48.0" prefWidth="127.0" text="Добавить книгу">
+                        <Button fx:id="addbooksiz" mnemonicParsing="false" prefHeight="48.0" prefWidth="127.0" text="Добавить книгу">
                            <VBox.margin>
                               <Insets />
                            </VBox.margin>
                         </Button>
                         <ImageView fitHeight="183.0" fitWidth="113.0" pickOnBounds="true" preserveRatio="true" />
-                        <Button mnemonicParsing="false" prefHeight="48.0" prefWidth="127.0" text="Абонименты" />
-                        <Button mnemonicParsing="false" prefHeight="48.0" prefWidth="127.0" text="Добавить читателя" textAlignment="CENTER" wrapText="true" />
+                        <Button fx:id="subscriberiz" mnemonicParsing="false" prefHeight="48.0" prefWidth="127.0" text="Абонименты" />
+                        <Button fx:id="readeriz" mnemonicParsing="false" prefHeight="48.0" prefWidth="127.0" text="Добавить читателя" textAlignment="CENTER" wrapText="true" />
                      </children>
                   </VBox>
                   <HBox layoutX="14.0" layoutY="14.0" prefHeight="68.0" prefWidth="463.0">
                      <children>
-                        <TextField promptText="ФИО">
+                        <TextField fx:id="addnameiz" promptText="ФИО">
                            <HBox.margin>
                               <Insets top="7.0" />
                            </HBox.margin>
                         </TextField>
-                        <TextField promptText="Адрес">
+                        <TextField fx:id="addadressiz" promptText="Адрес">
                            <HBox.margin>
                               <Insets left="140.0" top="7.0" />
                            </HBox.margin>
@@ -49,7 +49,7 @@
                   </HBox>
                   <HBox layoutX="14.0" layoutY="82.0" prefHeight="68.0" prefWidth="463.0" AnchorPane.bottomAnchor="221.0" AnchorPane.rightAnchor="123.0" AnchorPane.topAnchor="82.0">
                      <children>
-                        <TextField promptText="Номер телефона">
+                        <TextField fx:id="addphoneiz" promptText="Номер телефона">
                            <HBox.margin>
                               <Insets left="145.0" top="7.0" />
                            </HBox.margin>
@@ -62,64 +62,9 @@
                         <Insets />
                      </opaqueInsets>
                   </HBox>
-                  <Button layoutX="177.0" layoutY="196.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="123.0" text="Добавить читателя" />
+                  <Button fx:id="addiz" layoutX="177.0" layoutY="196.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="163.0" text="Добавить читателя" />
                </children></AnchorPane>
       </content>
     </Tab>
-      <Tab text="Библеотека УдГУ">
-         <content>
-            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
-               <children>
-                  <VBox layoutX="486.0" layoutY="-1.0" prefHeight="372.0" prefWidth="113.0">
-                     <children>
-                        <Button mnemonicParsing="false" prefHeight="48.0" prefWidth="127.0" text="Книги">
-                           <VBox.margin>
-                              <Insets />
-                           </VBox.margin>
-                        </Button>
-                        <Button mnemonicParsing="false" prefHeight="48.0" prefWidth="127.0" text="Добавить книгу">
-                           <VBox.margin>
-                              <Insets />
-                           </VBox.margin>
-                        </Button>
-                        <ImageView fitHeight="183.0" fitWidth="113.0" pickOnBounds="true" preserveRatio="true" />
-                        <Button mnemonicParsing="false" prefHeight="48.0" prefWidth="127.0" text="Абонименты" />
-                        <Button mnemonicParsing="false" prefHeight="48.0" prefWidth="127.0" text="Добавить читателя" textAlignment="CENTER" wrapText="true" />
-                     </children>
-                  </VBox>
-                  <HBox layoutX="14.0" layoutY="14.0" prefHeight="68.0" prefWidth="463.0">
-                     <children>
-                        <TextField promptText="ФИО">
-                           <HBox.margin>
-                              <Insets top="7.0" />
-                           </HBox.margin>
-                        </TextField>
-                        <TextField promptText="Адрес">
-                           <HBox.margin>
-                              <Insets left="140.0" top="7.0" />
-                           </HBox.margin>
-                        </TextField>
-                     </children>
-                  </HBox>
-                  <HBox layoutX="14.0" layoutY="82.0" prefHeight="68.0" prefWidth="463.0" AnchorPane.bottomAnchor="221.0" AnchorPane.rightAnchor="123.0" AnchorPane.topAnchor="82.0">
-                     <children>
-                        <TextField promptText="Номер телефона">
-                           <HBox.margin>
-                              <Insets left="145.0" top="7.0" />
-                           </HBox.margin>
-                           <opaqueInsets>
-                              <Insets />
-                           </opaqueInsets>
-                        </TextField>
-                     </children>
-                     <opaqueInsets>
-                        <Insets />
-                     </opaqueInsets>
-                  </HBox>
-                  <Button layoutX="177.0" layoutY="196.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="123.0" text="Добавить читателя" />
-               </children>
-            </AnchorPane>
-         </content>
-      </Tab>
   </tabs>
 </TabPane>
