--- a/src/main/resources/com/example/curs0/books-search.fxml
+++ b/src/main/resources/com/example/curs0/books-search.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 
-<TabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+<TabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.curs0.BookssearchController">
   <tabs>
     <Tab text="Библеотека ИжГТУ">
       <content>
@@ -19,42 +19,42 @@
                <children>
                   <VBox layoutX="486.0" layoutY="-1.0" prefHeight="372.0" prefWidth="113.0">
                      <children>
-                        <Button mnemonicParsing="false" prefHeight="48.0" prefWidth="127.0" text="Книги">
+                        <Button fx:id="books" mnemonicParsing="false" prefHeight="48.0" prefWidth="127.0" text="Книги">
                            <VBox.margin>
                               <Insets />
                            </VBox.margin>
                         </Button>
-                        <Button mnemonicParsing="false" prefHeight="48.0" prefWidth="127.0" text="Добавить книгу">
+                        <Button fx:id="addbooks" mnemonicParsing="false" prefHeight="48.0" prefWidth="127.0" text="Добавить книгу">
                            <VBox.margin>
                               <Insets />
                            </VBox.margin>
                         </Button>
                         <ImageView fitHeight="183.0" fitWidth="113.0" pickOnBounds="true" preserveRatio="true" />
-                        <Button mnemonicParsing="false" prefHeight="48.0" prefWidth="127.0" text="Абонименты" />
-                        <Button mnemonicParsing="false" prefHeight="48.0" prefWidth="127.0" text="Добавить читателя" textAlignment="CENTER" wrapText="true" />
+                        <Button fx:id="seasontickets" mnemonicParsing="false" prefHeight="48.0" prefWidth="127.0" text="Абонименты" />
+                        <Button fx:id="readeradd" mnemonicParsing="false" prefHeight="48.0" prefWidth="127.0" text="Добавить читателя" textAlignment="CENTER" wrapText="true" />
                      </children>
                   </VBox>
                   <VBox layoutX="14.0" layoutY="7.0" prefHeight="112.0" prefWidth="296.0">
                      <children>
-                        <TextField promptText="Поиск по названию книги">
+                        <TextField fx:id="searchbookname" promptText="Поиск по названию книги">
                            <VBox.margin>
                               <Insets top="20.0" />
                            </VBox.margin>
                         </TextField>
-                        <TextField promptText="Поиск по автору книги">
+                        <TextField fx:id="searchauthor" promptText="Поиск по автору книги">
                            <VBox.margin>
                               <Insets top="30.0" />
                            </VBox.margin>
                         </TextField>
                      </children>
                   </VBox>
-                  <Button layoutX="330.0" layoutY="49.0" mnemonicParsing="false" prefHeight="34.0" prefWidth="115.0" text="Найти" />
-                  <TableView layoutX="1.0" layoutY="118.0" prefHeight="253.0" prefWidth="484.0">
+                  <Button fx:id="find" layoutX="330.0" layoutY="49.0" mnemonicParsing="false" prefHeight="34.0" prefWidth="115.0" text="Найти" />
+                  <TableView fx:id="searchTable" layoutX="1.0" layoutY="118.0" prefHeight="253.0" prefWidth="484.0">
                     <columns>
-                        <TableColumn prefWidth="113.0" text="Название" />
-                      <TableColumn prefWidth="99.0" text="Тематика" />
-                      <TableColumn prefWidth="175.0" text="Автор" />
-                        <TableColumn prefWidth="96.0" text="Количество" />
+                        <TableColumn fx:id="namebookColumn" prefWidth="113.0" text="Название" />
+                      <TableColumn fx:id="topicColumn" prefWidth="120.0" text="Тематика" />
+                      <TableColumn fx:id="authorColumn" prefWidth="160.0" text="Автор" />
+                        <TableColumn fx:id="quantityColumn" prefWidth="90.0" text="Количество" />
                     </columns>
                   </TableView>
                </children></AnchorPane>
