--- a/src/main/resources/com/example/curs0/add-readres.fxml
+++ b/src/main/resources/com/example/curs0/add-readres.fxml
@@ -18,18 +18,18 @@
                <children>
                   <VBox layoutX="486.0" layoutY="-1.0" prefHeight="372.0" prefWidth="113.0">
                      <children>
-                        <Button fx:id="booksiz" mnemonicParsing="false" prefHeight="48.0" prefWidth="127.0" text="Книги">
+                        <Button fx:id="books" mnemonicParsing="false" onAction="#booksbt" prefHeight="48.0" prefWidth="127.0" text="Книги">
                            <VBox.margin>
                               <Insets />
                            </VBox.margin>
                         </Button>
-                        <Button fx:id="addbooksiz" mnemonicParsing="false" prefHeight="48.0" prefWidth="127.0" text="Добавить книгу">
+                        <Button fx:id="addbooks" mnemonicParsing="false" onAction="#addbooksbt" prefHeight="48.0" prefWidth="127.0" text="Добавить книгу">
                            <VBox.margin>
                               <Insets />
                            </VBox.margin>
                         </Button>
                         <ImageView fitHeight="183.0" fitWidth="113.0" pickOnBounds="true" preserveRatio="true" />
-                        <Button fx:id="subscriberiz" mnemonicParsing="false" prefHeight="48.0" prefWidth="127.0" text="Абонименты" />
+                        <Button fx:id="subscriber" mnemonicParsing="false" prefHeight="48.0" prefWidth="127.0" text="Абонименты" />
                         <Button fx:id="readeriz" mnemonicParsing="false" prefHeight="48.0" prefWidth="127.0" text="Добавить читателя" textAlignment="CENTER" wrapText="true" />
                      </children>
                   </VBox>
