--- a/src/main/resources/com/example/curs0/season-ticket.fxml
+++ b/src/main/resources/com/example/curs0/season-ticket.fxml
@@ -11,30 +11,30 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 
-<TabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.curs0.SeansonticketController">
+<TabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.curs0.SeansonticketController">
   <tabs>
     <Tab text="Библеотека ИжГТУ">
       <content>
         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                <children>
-                  <VBox layoutX="486.0" layoutY="-1.0" prefHeight="372.0" prefWidth="113.0">
+                  <VBox layoutX="727.0" layoutY="-1.0" prefHeight="564.0" prefWidth="161.0">
                      <children>
-                        <Button fx:id="booksButton" mnemonicParsing="false" onAction="#booksbt" prefHeight="48.0" prefWidth="127.0" text="Книги">
+                        <Button fx:id="booksButton" mnemonicParsing="false" onAction="#booksbt" prefHeight="48.0" prefWidth="176.0" text="Книги">
                            <VBox.margin>
                               <Insets />
                            </VBox.margin>
                         </Button>
-                        <Button fx:id="addbooksButton" mnemonicParsing="false" onAction="#addbooksbt" prefHeight="48.0" prefWidth="127.0" text="Добавить книгу">
+                        <Button fx:id="addbooksButton" mnemonicParsing="false" onAction="#addbooksbt" prefHeight="48.0" prefWidth="195.0" text="Добавить книгу">
                            <VBox.margin>
                               <Insets />
                            </VBox.margin>
                         </Button>
-                        <ImageView fitHeight="183.0" fitWidth="113.0" pickOnBounds="true" preserveRatio="true" />
-                        <Button fx:id="seasonticketsButton" mnemonicParsing="false" prefHeight="48.0" prefWidth="127.0" text="Абонименты" />
-                        <Button fx:id="readeraddButton" mnemonicParsing="false" onAction="#readeraddbt" prefHeight="48.0" prefWidth="127.0" text="Добавить читателя" textAlignment="CENTER" wrapText="true" />
+                        <ImageView fitHeight="371.0" fitWidth="164.0" pickOnBounds="true" preserveRatio="true" />
+                        <Button fx:id="seasonticketsButton" mnemonicParsing="false" prefHeight="48.0" prefWidth="199.0" text="Абонименты" />
+                        <Button fx:id="readeraddButton" mnemonicParsing="false" onAction="#readeraddbt" prefHeight="48.0" prefWidth="173.0" text="Добавить читателя" textAlignment="CENTER" wrapText="true" />
                      </children>
                   </VBox>
-                  <VBox layoutX="14.0" layoutY="7.0" prefHeight="112.0" prefWidth="296.0">
+                  <VBox layoutX="14.0" layoutY="7.0" prefHeight="112.0" prefWidth="480.0">
                      <children>
                         <TextField fx:id="nameuserText" promptText="ФИО читателя">
                            <VBox.margin>
@@ -48,19 +48,17 @@
                         </Button>
                      </children>
                   </VBox>
-                  <TableView fx:id="searchTable" layoutX="1.0" layoutY="118.0" prefHeight="253.0" prefWidth="484.0">
+                  <TableView fx:id="searchTable" layoutX="1.0" layoutY="118.0" prefHeight="450.0" prefWidth="724.0">
                     <columns>
-                        <TableColumn fx:id="namebookColumn" prefWidth="113.0" text="Название Книги" />
-                      <TableColumn fx:id="nameuserColumn" prefWidth="120.0" text="ФИО" />
-                      <TableColumn fx:id="dateissueColumn" prefWidth="160.0" text="Дата выдачи" />
-                        <TableColumn fx:id="datareturnColumn" prefWidth="90.0" text="Дата возврата" />
+                        <TableColumn fx:id="namebookColumn" prefWidth="162.0" text="Название Книги" />
+                      <TableColumn fx:id="nameuserColumn" prefWidth="118.0" text="ФИО" />
+                      <TableColumn fx:id="dateissueColumn" prefWidth="150.0" text="Дата выдачи" />
+                        <TableColumn fx:id="datareturnColumn" prefWidth="140.0" text="Дата возврата" />
+                        <TableColumn fx:id="namebookColumn1" prefWidth="162.0" text="Вернуть" />
                     </columns>
                   </TableView>
-                  <VBox layoutX="348.0" layoutY="39.0" prefHeight="49.0" prefWidth="100.0">
-                     <children>
-                        <Button fx:id="issueButton" mnemonicParsing="false" onAction="#issuebt" prefHeight="48.0" prefWidth="127.0" text="Выдать" />
-                     </children>
-                  </VBox>
+                  <VBox layoutX="348.0" layoutY="39.0" prefHeight="49.0" prefWidth="100.0" />
+                  <Button fx:id="issueButton" layoutX="557.0" layoutY="37.0" mnemonicParsing="false" onAction="#issuebt" prefHeight="48.0" prefWidth="127.0" text="Выдать" />
                </children></AnchorPane>
       </content>
     </Tab>
