--- a/src/main/resources/com/example/curs0/season-ticket.fxml
+++ b/src/main/resources/com/example/curs0/season-ticket.fxml
@@ -50,15 +50,15 @@
                   </VBox>
                   <TableView fx:id="searchTable" layoutX="1.0" layoutY="118.0" prefHeight="450.0" prefWidth="724.0">
                     <columns>
-                        <TableColumn fx:id="namebookColumn" prefWidth="162.0" text="Название Книги" />
-                      <TableColumn fx:id="nameuserColumn" prefWidth="118.0" text="ФИО" />
-                      <TableColumn fx:id="dateissueColumn" prefWidth="150.0" text="Дата выдачи" />
-                        <TableColumn fx:id="datareturnColumn" prefWidth="140.0" text="Дата возврата" />
-                        <TableColumn fx:id="namebookColumn1" prefWidth="162.0" text="Вернуть" />
+                        <TableColumn fx:id="namebookColumn" prefWidth="172.0" text="Название Книги" />
+                      <TableColumn fx:id="nameuserColumn" prefWidth="225.0" text="ФИО" />
+                      <TableColumn fx:id="dateissueColumn" prefWidth="170.0" text="Дата выдачи" />
+                        <TableColumn fx:id="datareturnColumn" prefWidth="156.0" text="Дата возврата" />
                     </columns>
                   </TableView>
                   <VBox layoutX="348.0" layoutY="39.0" prefHeight="49.0" prefWidth="100.0" />
-                  <Button fx:id="issueButton" layoutX="557.0" layoutY="37.0" mnemonicParsing="false" onAction="#issuebt" prefHeight="48.0" prefWidth="127.0" text="Выдать" />
+                  <Button fx:id="issueButton" layoutX="580.0" mnemonicParsing="false" onAction="#issuebt" prefHeight="48.0" prefWidth="127.0" text="Выдать" />
+                  <Button fx:id="returnButton" layoutX="580.0" layoutY="64.0" mnemonicParsing="false" prefHeight="48.0" prefWidth="127.0" text="Возврат" />
                </children></AnchorPane>
       </content>
     </Tab>
