--- a/src/main/resources/com/example/curs0/season-ticket.fxml
+++ b/src/main/resources/com/example/curs0/season-ticket.fxml
@@ -58,7 +58,7 @@
                   </TableView>
                   <VBox layoutX="348.0" layoutY="39.0" prefHeight="49.0" prefWidth="100.0" />
                   <Button fx:id="issueButton" layoutX="580.0" mnemonicParsing="false" onAction="#issuebt" prefHeight="48.0" prefWidth="127.0" text="Выдать" />
-                  <Button fx:id="returnButton" layoutX="580.0" layoutY="64.0" mnemonicParsing="false" prefHeight="48.0" prefWidth="127.0" text="Возврат" />
+                  <Button fx:id="returnButton" layoutX="580.0" layoutY="64.0" mnemonicParsing="false" onAction="#returnbt" prefHeight="48.0" prefWidth="127.0" text="Возврат" />
                </children></AnchorPane>
       </content>
     </Tab>
